--- a/ASiC Midterm-Exam/Base.lproj/Main.storyboard
+++ b/ASiC Midterm-Exam/Base.lproj/Main.storyboard
@@ -68,9 +68,12 @@
                                     <constraint firstItem="c37-Ym-WyJ" firstAttribute="centerY" secondItem="oa1-6a-WLf" secondAttribute="centerY" id="NZ0-lf-lYE"/>
                                 </constraints>
                             </view>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="z1P-By-yXT">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="299" translatesAutoresizingMaskIntoConstraints="NO" id="z1P-By-yXT">
                                 <rect key="frame" x="45.5" y="553" width="284" height="31"/>
                                 <color key="tintColor" red="0.71588908958888886" green="0.44127747420000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="videoSliderChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="ONC-v9-YWc"/>
+                                </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L1j-k7-k7T">
                                 <rect key="frame" x="111.5" y="613" width="24" height="24"/>
@@ -158,6 +161,7 @@
                     <connections>
                         <outlet property="playBtn" destination="m1b-AO-I2D" id="giB-e2-acJ"/>
                         <outlet property="timeLabel" destination="AuH-rL-4V5" id="bdT-l5-cQA"/>
+                        <outlet property="videoSlider" destination="z1P-By-yXT" id="UpJ-sP-RDf"/>
                         <outlet property="videoView" destination="oa1-6a-WLf" id="Xel-t8-ba5"/>
                         <outlet property="volumeBtn" destination="D4C-Ls-2rO" id="1f4-nY-P87"/>
                     </connections>
