--- a/ASiC Midterm-Exam/Base.lproj/Main.storyboard
+++ b/ASiC Midterm-Exam/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TN3-hR-U0U">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,14 +15,14 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ASiC_Midterm_Exam" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oa1-6a-WLf">
-                                <rect key="frame" x="0.0" y="228" width="375" height="211"/>
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c37-Ym-WyJ">
-                                        <rect key="frame" x="166.5" y="95" width="42" height="21"/>
+                                        <rect key="frame" x="312.5" y="177" width="42" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -41,7 +41,7 @@
                                 </variation>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m1b-AO-I2D">
-                                <rect key="frame" x="175.5" y="613" width="24" height="24"/>
+                                <rect key="frame" x="321.5" y="341" width="24" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="8mu-bf-Hsq"/>
                                     <constraint firstAttribute="width" constant="24" id="O88-Kd-a6e"/>
@@ -52,7 +52,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4O8-cG-85g">
-                                <rect key="frame" x="239.5" y="613" width="24" height="24"/>
+                                <rect key="frame" x="385.5" y="341" width="24" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="Dul-fN-0Ix"/>
                                     <constraint firstAttribute="width" constant="24" id="oeD-Up-U3x"/>
@@ -63,7 +63,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sQq-IZ-0Jq">
-                                <rect key="frame" x="303.5" y="613" width="24" height="24"/>
+                                <rect key="frame" x="449.5" y="341" width="24" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="eVi-yA-ht5"/>
                                     <constraint firstAttribute="width" constant="24" id="pb5-yp-a2b"/>
@@ -74,14 +74,14 @@
                                 </connections>
                             </button>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="299" translatesAutoresizingMaskIntoConstraints="NO" id="z1P-By-yXT">
-                                <rect key="frame" x="45.5" y="553" width="284" height="31"/>
+                                <rect key="frame" x="191.5" y="301" width="284" height="31"/>
                                 <color key="tintColor" red="0.71588908958888886" green="0.44127747420000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <action selector="videoSliderChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="ONC-v9-YWc"/>
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L1j-k7-k7T">
-                                <rect key="frame" x="111.5" y="613" width="24" height="24"/>
+                                <rect key="frame" x="257.5" y="341" width="24" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="24" id="FNd-7a-Njn"/>
                                     <constraint firstAttribute="height" constant="24" id="YEb-gd-2k6"/>
@@ -92,7 +92,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D4C-Ls-2rO">
-                                <rect key="frame" x="47.5" y="613" width="24" height="24"/>
+                                <rect key="frame" x="193.5" y="341" width="24" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="24" id="WPu-zk-9jn"/>
                                     <constraint firstAttribute="height" constant="24" id="ytZ-Io-uJY"/>
@@ -103,19 +103,19 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4:59" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="she-6k-Esj">
-                                <rect key="frame" x="337.5" y="557.5" width="27.5" height="21"/>
+                                <rect key="frame" x="483.5" y="305.5" width="173.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="請輸入欲播放影片網址" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ml2-jj-owB">
-                                <rect key="frame" x="10" y="79" width="295" height="30"/>
+                                <rect key="frame" x="10" y="47" width="587" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xfc-xz-rY6">
-                                <rect key="frame" x="315" y="79" width="50" height="30"/>
+                                <rect key="frame" x="607" y="47" width="50" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="3Fd-84-V5D"/>
                                 </constraints>
@@ -127,7 +127,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AuH-rL-4V5">
-                                <rect key="frame" x="10" y="557.5" width="27.5" height="21"/>
+                                <rect key="frame" x="10" y="305.5" width="173.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -141,7 +141,7 @@
                             <constraint firstItem="sQq-IZ-0Jq" firstAttribute="centerY" secondItem="4O8-cG-85g" secondAttribute="centerY" id="4TR-PM-Rg7"/>
                             <constraint firstItem="L1j-k7-k7T" firstAttribute="leading" secondItem="D4C-Ls-2rO" secondAttribute="trailing" constant="40" id="508-Kq-8dH"/>
                             <constraint firstItem="she-6k-Esj" firstAttribute="centerY" secondItem="z1P-By-yXT" secondAttribute="centerY" id="A0Q-mo-svD"/>
-                            <constraint firstItem="oa1-6a-WLf" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="BXy-dF-KOP"/>
+                            <constraint firstItem="oa1-6a-WLf" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="BXy-dF-KOP"/>
                             <constraint firstItem="m1b-AO-I2D" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="C79-bp-Xpw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xfc-xz-rY6" secondAttribute="trailing" constant="10" id="Loa-fu-eCD"/>
                             <constraint firstItem="z1P-By-yXT" firstAttribute="leading" secondItem="D4C-Ls-2rO" secondAttribute="leading" id="Oxz-BT-jga"/>
@@ -156,7 +156,7 @@
                             <constraint firstItem="D4C-Ls-2rO" firstAttribute="centerY" secondItem="L1j-k7-k7T" secondAttribute="centerY" id="cPJ-yv-jgL"/>
                             <constraint firstItem="z1P-By-yXT" firstAttribute="trailing" secondItem="sQq-IZ-0Jq" secondAttribute="trailing" id="cvl-hW-Aly"/>
                             <constraint firstItem="oa1-6a-WLf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="d6F-l4-dbC"/>
-                            <constraint firstItem="oa1-6a-WLf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dO9-Ra-21x"/>
+                            <constraint firstItem="oa1-6a-WLf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dO9-Ra-21x"/>
                             <constraint firstItem="she-6k-Esj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-10" id="gmA-9Z-B1S"/>
                             <constraint firstItem="sQq-IZ-0Jq" firstAttribute="leading" secondItem="4O8-cG-85g" secondAttribute="trailing" constant="40" id="iSh-Qo-fjd"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="m1b-AO-I2D" secondAttribute="bottom" constant="30" id="ium-eT-yQv">
@@ -186,6 +186,9 @@
                     </view>
                     <navigationItem key="navigationItem" title="Video Player" id="LdA-03-eKU"/>
                     <connections>
+                        <outlet property="backwardBtn" destination="L1j-k7-k7T" id="EJH-MI-Zld"/>
+                        <outlet property="endTimeLabel" destination="she-6k-Esj" id="ZT4-5e-5a9"/>
+                        <outlet property="forwardBtn" destination="4O8-cG-85g" id="JU6-8R-rqz"/>
                         <outlet property="fullScreenBtn" destination="sQq-IZ-0Jq" id="xBn-9V-WWn"/>
                         <outlet property="playBtn" destination="m1b-AO-I2D" id="giB-e2-acJ"/>
                         <outlet property="searchBtn" destination="xfc-xz-rY6" id="4ra-Ru-FXM"/>
@@ -206,7 +209,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TN3-hR-U0U" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GME-U2-GAu">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="32"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
