Enable to search the video.

--- a/ASiC Midterm-Exam/Base.lproj/Main.storyboard
+++ b/ASiC Midterm-Exam/Base.lproj/Main.storyboard
@@ -21,14 +21,13 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oa1-6a-WLf">
                                 <rect key="frame" x="0.0" y="228" width="375" height="211"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c37-Ym-WyJ">
-                                        <rect key="frame" x="166.5" y="95" width="42" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="目前尚無影片可播放" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c37-Ym-WyJ">
+                                        <rect key="frame" x="109.5" y="95" width="156" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" red="0.65490196079999996" green="0.65490196079999996" blue="0.6588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="c37-Ym-WyJ" firstAttribute="centerX" secondItem="oa1-6a-WLf" secondAttribute="centerX" id="8RD-dF-Dgo"/>
                                     <constraint firstAttribute="width" secondItem="oa1-6a-WLf" secondAttribute="height" multiplier="16:9" id="Iai-gC-zrH"/>
